[package]
name = "libept"
version = "0.1.0"
authors = ["Bill Jackson <bjackson@earthcomputing.io>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.65"
crossbeam = "0.7.1"
backtrace = "0.3"
failure = "0.1.1"
futures = "0.1.23"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"

